# Client-Server-Chat

./: README.md
Client/: CMakeLists.txt  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Client-Server-Chat/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp  server.cpp  server.h
build-Client-Desktop_Qt_5_12_12_GCC_64bit-Debug/: CMakeCache.txt  Client  Makefile  cmake_install.cmake  qtcsettings.cmake
build-Client-Desktop_Qt_5_12_12_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-06372d6908665ccc0111.json  cmakeFiles-v1-7be4b31a562ac1833542.json  codemodel-v2-88063b1ce860d1a437e5.json  index-2023-01-22T10-48-39-0704.json  target-Client-Debug-c1975aa9751f4adb1f94.json  target-Client_autogen-Debug-b50c1af836e1ed52c6ae.json
build-Client-Desktop_Qt_5_12_12_GCC_64bit-Debug/Client_autogen/EWIEGA46WW/: moc_mainwindow.cpp
build-Client-Desktop_Qt_5_12_12_GCC_64bit-Debug/Client_autogen/include/: ui_mainwindow.h
build-Server-Desktop_Qt_5_12_12_GCC_64bit-Debug/: CMakeCache.txt  Makefile  Server  cmake_install.cmake
build-Server-Desktop_Qt_5_12_12_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-633e86171539b99c1620.json  (+3 more)
build-Server-Desktop_Qt_5_12_12_GCC_64bit-Debug/Client/: CMakeLists.txt
build-Server-Desktop_Qt_5_12_12_GCC_64bit-Debug/Server_autogen/: moc_predefs.h
build-Server-Desktop_Qt_5_12_12_GCC_64bit-Debug/Server_autogen/EWIEGA46WW/: moc_server.cpp
build-Server-Desktop_Qt_5_12_12_GCC_64bit-Debug/build-Client-Desktop_Qt_5_12_12_GCC_64bit-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake
(+15 files in other folders)
